Ported validators to Polymer 1.0.

--- a/bower.json
+++ b/bower.json
@@ -1,22 +1,23 @@
 {
-    "name": "cbn-components-i18n-ro",
-    "version": "0.0.1",
-    "private": true,
-    "description": "Internationalized messages and addons for common cbn-* components.",
-    "main": "all.html",
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "../",
-        "test",
-        "tests"
-    ],
-    "dependencies": {
-        "polymer": "Polymer/polymer#^0.5"
-    },
-    "devDependencies": {
-        "cbn-form": "git@bitbucket.org:cbn-it/cbn-form.git#master",
-        "web-component-tester": "Polymer/web-component-tester"
-    }
+  "name": "cbn-components-i18n-ro",
+  "version": "1.0.0",
+  "private": true,
+  "description": "Internationalized messages and addons for common cbn-* components.",
+  "main": "all.html",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "../",
+    "test",
+    "tests"
+  ],
+  "dependencies": {
+    "polymer": "Polymer/polymer#^1.0",
+    "cbn-form": "git@bitbucket.org:cbn-it/cbn-form.git#polymer1.0"
+  },
+  "devDependencies": {
+    "web-component-tester": "Polymer/web-component-tester",
+    "iron-input": "PolymerElements/iron-input#~1.0.7"
+  }
 }
