--- a/bower.json
+++ b/bower.json
@@ -13,11 +13,10 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.0",
+    "polymer": "Polymer/polymer#1.3.0",
     "cbn-form": "git@bitbucket.org:cbn-it/cbn-form.git#polymer1.0"
   },
   "devDependencies": {
-    "web-component-tester": "Polymer/web-component-tester",
-    "iron-input": "PolymerElements/iron-input#~1.0.7"
+    "web-component-tester": "Polymer/web-component-tester"
   }
 }
