--- a/bower.json
+++ b/bower.json
@@ -13,8 +13,8 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#1.3.0",
-    "cbn-form": "git@bitbucket.org:cbn-it/cbn-form.git#polymer1.0"
+    "polymer": "Polymer/polymer#1.3.1",
+    "cbn-form": "git@bitbucket.org:cbn-it/cbn-form.git#master"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester"
