--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#1.3.1",
+    "polymer": "Polymer/polymer#^1.3.1",
     "cbn-form": "git@bitbucket.org:cbn-it/cbn-form.git#master"
   },
   "devDependencies": {
