--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "cbn-components-i18n-ro",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "description": "Internationalized messages and addons for common cbn-* components.",
   "main": "all.html",
@@ -14,7 +14,7 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^1.3.1",
-    "cbn-form": "git@bitbucket.org:cbn-it/cbn-form.git#master"
+    "cbn-form": "git@bitbucket.org:cbn-it/cbn-form.git#~1.1.0"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester"
