--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^1.3.1",
-    "cbn-form": "git@bitbucket.org:cbn-it/cbn-form.git#~1.1.0"
+    "cbn-form": "CBN-IT/cbn-form#~1.1.0"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester"
